# java-reusability

shared-server/: settings.gradle
shared-server-go/: go.mod  go.sum  main.go  server.h
shared-server-js/: index.js  jvm.js  package-lock.json  package.json  server.js
shared-server-rs/: Cargo.toml
shared-server-rs/src/: jvm.rs  lib.rs  main.rs  module_wrapper.rs  server.rs
shared-server/lib/src/main/java/shared/server/: RouteHandler.java  RouteHandlerNative.java  Server.java
shared-server/lib/src/test/java/shared/server/: ServerTest.java
