[package]
name = "shared-server-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = {version="0.21.1", features=["invocation"]}
once_cell = "1.17.0"

[lib]
crate_type = ["cdylib"]
path = "src/main.rs"
name = "shared_server_rs"